# sdd-codex-learning-lab

./: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  playwright.demoqa-api.config.ts  playwright.demoqa.config.ts  playwright.ps5-games-manager.config.ts  pyproject.toml  study-log.md  tsconfig.json
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: SDD-GUIDE.md  study-risk-map.md
specs/001-prompt-lab/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-prompt-lab/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-demoqa-books-e2e/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-demoqa-books-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ps5-games-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-pokeapi-api/: problem-brief.md  spec.md
src/prompt_lab/: __init__.py  __main__.py  cli.py  models.py  providers.py  repository.py  service.py  web.py
src/ps5_games_manager/: __init__.py  __main__.py  models.py  rawg.py  repository.py  service.py  web.py
tests/: test_cli.py  test_performance.py  test_providers.py  test_repository.py  test_service.py  test_web.py
tests-e2e/: prompt-lab.spec.ts
(+34 files in other folders)
